--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -41,7 +41,7 @@
 </p><p><span id="Menus"></span>
 </p>
 <h3><span id=".D0.9C.D0.B5.D0.BD.D1.8E.D1.82.D0.B0"></span><span class="mw-headline" id="&#1052;&#1077;&#1085;&#1102;&#1090;&#1072;">&#1052;&#1077;&#1085;&#1102;&#1090;&#1072;</span></h3>
-<p>The <a href="../Standard_Menu.html" title="Standard Menu">standard menus</a> are: <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_File_Menu.html" title="Std File Menu"><b>File</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Edit_Menu.html" title="Std Edit Menu"><b>Edit</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_View_Menu.html" title="Std View Menu"><b>View</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Tools_Menu.html" title="Std Tools Menu"><b>Tools</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Macro_Menu.html" title="Std Macro Menu"><b>Macro</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Windows_Menu.html" title="Std Windows Menu"><b>Windows</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Help_Menu.html" title="Std Help Menu"><b>Help</b></a></span>.
+<p><a href="../Standard_Menu.html" title="Standard Menu">standard menus</a> &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072;: <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_File_Menu.html" title="Std File Menu"><b>File</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Edit_Menu.html" title="Std Edit Menu"><b>Edit</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_View_Menu.html" title="Std View Menu"><b>View</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Tools_Menu.html" title="Std Tools Menu"><b>Tools</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Macro_Menu.html" title="Std Macro Menu"><b>Macro</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Windows_Menu.html" title="Std Windows Menu"><b>Windows</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Help_Menu.html" title="Std Help Menu"><b>Help</b></a></span>.
 </p>
 <h3><span class="mw-headline" id="Toolbars">Toolbars</span></h3>
 <p>The standard toolbars that appear in the interface are:
@@ -126,12 +126,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117085339
+Cached time: 20260117085410
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.088 seconds
-Real time usage: 0.351 seconds
+CPU time usage: 0.072 seconds
+Real time usage: 0.103 seconds
 Preprocessor visited node count: 351/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
@@ -142,18 +142,18 @@ Unstrip post&#8208;expand size: 2530/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   62.132      1 -total
- 21.79%   13.537      1 Template:Interface_navi/bg
- 18.57%   11.536      7 Template:StdMenu
- 18.19%   11.302      1 Template:Userdocnavi/bg
- 15.64%    9.718      1 Template:Version
-  9.76%    6.066     20 Template:MenuCommand
-  9.71%    6.031      2 Template:Navigation_menu_2
-  9.14%    5.681      1 Template:Caption
-  7.80%    4.848      1 Template:TOCright
+100.00%   17.605      1 -total
+ 28.59%    5.034      1 Template:Userdocnavi/bg
+ 25.57%    4.501      1 Template:Interface_navi/bg
+ 20.70%    3.645      2 Template:Navigation_menu_2
+ 15.35%    2.702      7 Template:StdMenu
+  8.19%    1.441      1 Template:TOCright
+  8.17%    1.438     20 Template:MenuCommand
+  7.24%    1.275      1 Template:Caption
+  6.43%    1.132      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117085338 and revision id 1739359. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117085410 and revision id 1739361. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
