--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -52,7 +52,7 @@
 <li>&#1051;&#1077;&#1085;&#1090;&#1072; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1052;&#1072;&#1082;&#1088;&#1086;: &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1079;&#1072; &#1079;&#1072;&#1087;&#1080;&#1089;, &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077; &#1080; &#1080;&#1079;&#1087;&#1098;&#1083;&#1085;&#1077;&#1085;&#1080;&#1077; &#1085;&#1072; <a href="../Macros.html" title="Macros">macros</a>.</li>
 <li>&#1051;&#1077;&#1085;&#1090;&#1072;&#1090;&#1072; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1048;&#1079;&#1075;&#1083;&#1077;&#1076;: &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1079;&#1072; &#1082;&#1086;&#1085;&#1090;&#1088;&#1086;&#1083; &#1085;&#1072; &#1090;&#1086;&#1074;&#1072; &#1082;&#1072;&#1082; &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1074;&#1072;&#1090; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074; <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>.</li>
 <li>&#1051;&#1077;&#1085;&#1090;&#1072; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1057;&#1090;&#1088;&#1091;&#1082;&#1090;&#1091;&#1088;&#1072;: &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1079;&#1072; &#1086;&#1088;&#1075;&#1072;&#1085;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072; &#1080; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1074;&#1088;&#1098;&#1079;&#1082;&#1080; &#1082;&#1098;&#1084; &#1076;&#1086;&#1087;&#1098;&#1083;&#1085;&#1080;&#1090;&#1077;&#1083;&#1085;&#1080; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;.</li></ul>
-<p>These can be turned on and off by right clicking on an empty space on one of the toolbars and choosing the desired element, or from the menu, <b>View &rarr; Toolbars</b>.
+<p>&#1058;&#1077; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1089;&#1077; &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072;&#1090; &#1080; &#1080;&#1079;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072;&#1090;, &#1082;&#1072;&#1090;&#1086; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1089; &#1076;&#1077;&#1089;&#1085;&#1080;&#1103; &#1073;&#1091;&#1090;&#1086;&#1085; &#1074;&#1098;&#1088;&#1093;&#1091; &#1087;&#1088;&#1072;&#1079;&#1085;&#1086; &#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1089;&#1090;&#1074;&#1086; &#1085;&#1072; &#1077;&#1076;&#1085;&#1072; &#1086;&#1090; &#1083;&#1077;&#1085;&#1090;&#1080;&#1090;&#1077; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1080; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1078;&#1077;&#1083;&#1072;&#1085;&#1080;&#1103; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;, &#1080;&#1083;&#1080; &#1086;&#1090; &#1084;&#1077;&#1085;&#1102;&#1090;&#1086;,<b>View &rarr; Toolbars</b>.
 </p>
 <h3><span class="mw-headline" id="Panels">Panels</span></h3>
 <p>The main panels that allow working with objects are:
@@ -127,12 +127,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117090049
+Cached time: 20260117090717
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.086 seconds
-Real time usage: 0.290 seconds
+Real time usage: 0.143 seconds
 Preprocessor visited node count: 352/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
@@ -143,18 +143,18 @@ Unstrip post&#8208;expand size: 2530/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   70.119      1 -total
- 27.56%   19.322      1 Template:Interface_navi/bg
- 23.25%   16.304      1 Template:Userdocnavi/bg
- 17.43%   12.220      2 Template:Navigation_menu_2
- 16.75%   11.745      7 Template:StdMenu
- 11.87%    8.322     20 Template:MenuCommand
- 11.15%    7.819      1 Template:Version
-  7.98%    5.595      1 Template:TOCright
-  3.92%    2.751      1 Template:Caption
+100.00%   25.359      1 -total
+ 33.35%    8.457      1 Template:Interface_navi/bg
+ 22.29%    5.653      1 Template:Userdocnavi/bg
+ 18.25%    4.627      7 Template:StdMenu
+ 13.81%    3.502      2 Template:Navigation_menu_2
+  9.25%    2.347     20 Template:MenuCommand
+  6.00%    1.521      1 Template:Caption
+  5.92%    1.502      1 Template:TOCright
+  5.45%    1.382      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117090048 and revision id 1739366. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117090717 and revision id 1739368. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
