--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -53,8 +53,9 @@
 <li>&#1051;&#1077;&#1085;&#1090;&#1072;&#1090;&#1072; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1048;&#1079;&#1075;&#1083;&#1077;&#1076;: &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1079;&#1072; &#1082;&#1086;&#1085;&#1090;&#1088;&#1086;&#1083; &#1085;&#1072; &#1090;&#1086;&#1074;&#1072; &#1082;&#1072;&#1082; &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1074;&#1072;&#1090; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074; <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>.</li>
 <li>&#1051;&#1077;&#1085;&#1090;&#1072; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1057;&#1090;&#1088;&#1091;&#1082;&#1090;&#1091;&#1088;&#1072;: &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1079;&#1072; &#1086;&#1088;&#1075;&#1072;&#1085;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072; &#1080; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1074;&#1088;&#1098;&#1079;&#1082;&#1080; &#1082;&#1098;&#1084; &#1076;&#1086;&#1087;&#1098;&#1083;&#1085;&#1080;&#1090;&#1077;&#1083;&#1085;&#1080; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;.</li></ul>
 <p>&#1058;&#1077; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1089;&#1077; &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072;&#1090; &#1080; &#1080;&#1079;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072;&#1090;, &#1082;&#1072;&#1090;&#1086; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1089; &#1076;&#1077;&#1089;&#1085;&#1080;&#1103; &#1073;&#1091;&#1090;&#1086;&#1085; &#1074;&#1098;&#1088;&#1093;&#1091; &#1087;&#1088;&#1072;&#1079;&#1085;&#1086; &#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1089;&#1090;&#1074;&#1086; &#1085;&#1072; &#1077;&#1076;&#1085;&#1072; &#1086;&#1090; &#1083;&#1077;&#1085;&#1090;&#1080;&#1090;&#1077; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1080; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1078;&#1077;&#1083;&#1072;&#1085;&#1080;&#1103; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;, &#1080;&#1083;&#1080; &#1086;&#1090; &#1084;&#1077;&#1085;&#1102;&#1090;&#1086;,<b>View &rarr; Toolbars</b>.
+</p><p><span id="Panels"></span>
 </p>
-<h3><span class="mw-headline" id="Panels">Panels</span></h3>
+<h3><span id=".D0.9F.D0.B0.D0.BD.D0.B5.D0.BB.D0.B8"></span><span class="mw-headline" id="&#1055;&#1072;&#1085;&#1077;&#1083;&#1080;">&#1055;&#1072;&#1085;&#1077;&#1083;&#1080;</span></h3>
 <p>The main panels that allow working with objects are:
 </p>
 <ul><li><a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>: the area where 2D and 3D geometry is drawn.</li>
@@ -127,13 +128,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117090717
+Cached time: 20260117090735
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.143 seconds
-Preprocessor visited node count: 352/1000000
+CPU time usage: 0.079 seconds
+Real time usage: 0.119 seconds
+Preprocessor visited node count: 353/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
 Highest expansion depth: 5/100
@@ -143,18 +144,18 @@ Unstrip post&#8208;expand size: 2530/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.359      1 -total
- 33.35%    8.457      1 Template:Interface_navi/bg
- 22.29%    5.653      1 Template:Userdocnavi/bg
- 18.25%    4.627      7 Template:StdMenu
- 13.81%    3.502      2 Template:Navigation_menu_2
-  9.25%    2.347     20 Template:MenuCommand
-  6.00%    1.521      1 Template:Caption
-  5.92%    1.502      1 Template:TOCright
-  5.45%    1.382      1 Template:Version
+100.00%   26.478      1 -total
+ 30.16%    7.985      1 Template:Interface_navi/bg
+ 20.94%    5.545      7 Template:StdMenu
+ 17.42%    4.613      1 Template:Userdocnavi/bg
+ 14.04%    3.717      2 Template:Navigation_menu_2
+  9.51%    2.517      1 Template:Caption
+  9.28%    2.457     20 Template:MenuCommand
+  7.03%    1.862      1 Template:Version
+  6.99%    1.850      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117090717 and revision id 1739368. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117090735 and revision id 1739370. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
