--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -56,18 +56,18 @@
 </p><p><span id="Panels"></span>
 </p>
 <h3><span id=".D0.9F.D0.B0.D0.BD.D0.B5.D0.BB.D0.B8"></span><span class="mw-headline" id="&#1055;&#1072;&#1085;&#1077;&#1083;&#1080;">&#1055;&#1072;&#1085;&#1077;&#1083;&#1080;</span></h3>
-<p>The main panels that allow working with objects are:
+<p>&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1080;&#1090;&#1077; &#1087;&#1072;&#1085;&#1077;&#1083;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1103;&#1074;&#1072;&#1090; &#1088;&#1072;&#1073;&#1086;&#1090;&#1072; &#1089; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1089;&#1072;:
 </p>
-<ul><li><a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>: the area where 2D and 3D geometry is drawn.</li>
-<li><a href="../Combo_view.html" class="mw-redirect" title="Combo view">Combo view</a>: the panel that contains the <a href="../Tree_view.html" class="mw-redirect" title="Tree view">tree view</a>, the <a href="../Task_panel.html" class="mw-redirect" title="Task panel">task panel</a>, and the <a href="../Property_editor.html" class="mw-redirect" title="Property editor">property editor</a>.</li>
-<li><a href="../Tree_view.html" class="mw-redirect" title="Tree view">Tree view</a>: the element that shows all objects in the document and their parametric history.</li>
-<li><a href="../Task_panel.html" class="mw-redirect" title="Task panel">Task panel</a>: the panel that shows different actions and options depending on the drawing tool selected.</li>
-<li><a href="../Property_editor.html" class="mw-redirect" title="Property editor">Property editor</a>: the place where object properties are modified.</li>
-<li><a href="../Selection_view.html" class="mw-redirect" title="Selection view">Selection view</a>: the panel that shows elements that are currently selected.</li>
-<li><a href="../Report_view.html" class="mw-redirect" title="Report view">Report view</a>: the text box that shows different messages from the application and its tools.</li>
-<li><a href="../Python_console.html" class="mw-redirect" title="Python console">Python console</a>: the editor that allows running <a href="../Python.html" title="Python">Python</a> code interactively to see results in the <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>.</li>
-<li><a href="../Status_bar.html" class="mw-redirect" title="Status bar">Status bar</a>: the bar that shows certain messages from the application, and that has the <a href="../Mouse_navigation.html" title="Mouse navigation">mouse navigation</a> selector.</li>
-<li><a href="../DAG_view.html" class="mw-redirect" title="DAG view">DAG view</a>: an alternative to the <a href="../Tree_view.html" class="mw-redirect" title="Tree view">tree view</a>, which shows the relationships between different objects through a graph.</li></ul>
+<ul><li><a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>: &#1086;&#1073;&#1083;&#1072;&#1089;&#1090;&#1090;&#1072;, &#1074; &#1082;&#1086;&#1103;&#1090;&#1086; &#1089;&#1072; &#1074;&#1080;&#1078;&#1076;&#1072;&#1090; 2D &#1095;&#1077;&#1088;&#1090;&#1077;&#1078;&#1080; &#1080; 3D &#1075;&#1077;&#1086;&#1084;&#1077;&#1090;&#1088;&#1080;&#1103;.</li>
+<li><a href="../Combo_view.html" class="mw-redirect" title="Combo view">Combo view</a>: &#1087;&#1072;&#1085;&#1077;&#1083;&#1098;&#1090;, &#1082;&#1086;&#1081;&#1090;&#1086; &#1089;&#1098;&#1076;&#1098;&#1088;&#1078;&#1072; <a href="../Tree_view.html" class="mw-redirect" title="Tree view">tree view</a>, <a href="../Task_panel.html" class="mw-redirect" title="Task panel">task panel</a>, &#1080; <a href="../Property_editor.html" class="mw-redirect" title="Property editor">property editor</a>.</li>
+<li><a href="../Tree_view.html" class="mw-redirect" title="Tree view">Tree view</a>: &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1098;&#1090;, &#1082;&#1086;&#1081;&#1090;&#1086; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072; &#1080; &#1090;&#1103;&#1093;&#1085;&#1072;&#1090;&#1072; &#1087;&#1072;&#1088;&#1072;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1085;&#1072; &#1080;&#1089;&#1090;&#1086;&#1088;&#1080;&#1103;.</li>
+<li><a href="../Task_panel.html" class="mw-redirect" title="Task panel">Task panel</a>: &#1087;&#1072;&#1085;&#1077;&#1083;&#1098;&#1090;, &#1082;&#1086;&#1081;&#1090;&#1086; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1076;&#1077;&#1081;&#1089;&#1090;&#1074;&#1080;&#1103; &#1080; &#1086;&#1087;&#1094;&#1080;&#1080; &#1074; &#1079;&#1072;&#1074;&#1080;&#1089;&#1080;&#1084;&#1086;&#1089;&#1090; &#1086;&#1090; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085;&#1080;&#1103; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090; &#1079;&#1072; &#1095;&#1077;&#1088;&#1090;&#1072;&#1085;&#1077;.</li>
+<li><a href="../Property_editor.html" class="mw-redirect" title="Property editor">Property editor</a>: &#1084;&#1103;&#1089;&#1090;&#1086;&#1090;&#1086;, &#1086;&#1090; &#1082;&#1098;&#1076;&#1077;&#1090;&#1086; &#1089;&#1077; &#1084;&#1086;&#1076;&#1080;&#1092;&#1080;&#1094;&#1080;&#1088;&#1072;&#1090; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072;.</li>
+<li><a href="../Selection_view.html" class="mw-redirect" title="Selection view">Selection view</a>: &#1087;&#1072;&#1085;&#1077;&#1083;&#1098;&#1090;, &#1082;&#1086;&#1081;&#1090;&#1086; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080;&#1090;&#1077;, &#1080;&#1079;&#1073;&#1088;&#1072;&#1085;&#1080; &#1074; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072;.</li>
+<li><a href="../Report_view.html" class="mw-redirect" title="Report view">Report view</a>: &#1090;&#1077;&#1082;&#1089;&#1090;&#1086;&#1074;&#1086;&#1090;&#1086; &#1087;&#1086;&#1083;&#1077;, &#1082;&#1086;&#1077;&#1090;&#1086; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1089;&#1098;&#1086;&#1073;&#1097;&#1077;&#1085;&#1080;&#1103; &#1086;&#1090; &#1087;&#1088;&#1080;&#1083;&#1086;&#1078;&#1077;&#1085;&#1080;&#1077;&#1090;&#1086; &#1080; &#1085;&#1077;&#1075;&#1086;&#1074;&#1080;&#1090;&#1077; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;.</li>
+<li><a href="../Python_console.html" class="mw-redirect" title="Python console">Python console</a>: &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088;&#1098;&#1090;, &#1082;&#1086;&#1081;&#1090;&#1086; &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1103;&#1074;&#1072; &#1076;&#1072; &#1089;&#1077; &#1089;&#1090;&#1072;&#1088;&#1090;&#1080;&#1088;&#1072; &#1087;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1077;&#1085; &#1082;&#1086;&#1076; &#1085;&#1072; <a href="../Python.html" title="Python">Python</a> &#1080;&#1085;&#1090;&#1077;&#1088;&#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1086; &#1080; &#1076;&#1072; &#1089;&#1077; &#1074;&#1080;&#1076;&#1080; &#1088;&#1077;&#1079;&#1091;&#1083;&#1090;&#1072;&#1090;&#1072; &#1074; <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>.</li>
+<li><a href="../Status_bar.html" class="mw-redirect" title="Status bar">Status bar</a>: &#1083;&#1077;&#1085;&#1090;&#1072;&#1090;&#1072;, &#1082;&#1086;&#1103;&#1090;&#1086; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1086;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1077;&#1085;&#1080; &#1089;&#1098;&#1086;&#1073;&#1097;&#1077;&#1085;&#1080;&#1103; &#1086;&#1090; &#1087;&#1088;&#1080;&#1083;&#1086;&#1078;&#1077;&#1085;&#1080;&#1077;&#1090;&#1086;, &#1080; &#1082;&#1086;&#1103;&#1090;&#1086; &#1089;&#1098;&#1076;&#1098;&#1088;&#1078;&#1072; &#1087;&#1072;&#1076;&#1072;&#1097; &#1089;&#1087;&#1080;&#1089;&#1098;&#1082; &#1079;&#1072; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072;&#1095;&#1080;&#1085;&#1072; &#1079;&#1072; &#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; <a href="../Mouse_navigation.html" title="Mouse navigation">mouse navigation</a>.</li>
+<li><a href="../DAG_view.html" class="mw-redirect" title="DAG view">DAG view</a>: &#1072;&#1083;&#1090;&#1077;&#1088;&#1085;&#1072;&#1090;&#1080;&#1074;&#1072; &#1085;&#1072; <a href="../Tree_view.html" class="mw-redirect" title="Tree view">tree view</a>, &#1082;&#1098;&#1076;&#1077;&#1090;&#1086; &#1089;&#1077; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072;&#1090; &#1074;&#1079;&#1072;&#1080;&#1084;&#1086;&#1086;&#1090;&#1085;&#1086;&#1096;&#1077;&#1085;&#1080;&#1103;&#1090;&#1072; &#1084;&#1077;&#1078;&#1076;&#1091; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1095;&#1088;&#1077;&#1079; &#1075;&#1088;&#1072;&#1092;&#1080;&#1082;&#1072;.</li></ul>
 <p>With the exception of the 3D view, all can be turned on and off by right clicking on an empty space on one of the top toolbars and choosing the desired element, or from the menu, <b>View &rarr; Panels</b>.
 </p><p>To activate and deactivate the status bar use the menu, <b>View &rarr; Status bar</b>.
 </p>
@@ -128,12 +128,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117090735
+Cached time: 20260117091640
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.119 seconds
+CPU time usage: 0.074 seconds
+Real time usage: 0.125 seconds
 Preprocessor visited node count: 353/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
@@ -144,18 +144,18 @@ Unstrip post&#8208;expand size: 2530/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.478      1 -total
- 30.16%    7.985      1 Template:Interface_navi/bg
- 20.94%    5.545      7 Template:StdMenu
- 17.42%    4.613      1 Template:Userdocnavi/bg
- 14.04%    3.717      2 Template:Navigation_menu_2
-  9.51%    2.517      1 Template:Caption
-  9.28%    2.457     20 Template:MenuCommand
-  7.03%    1.862      1 Template:Version
-  6.99%    1.850      1 Template:TOCright
+100.00%   17.245      1 -total
+ 28.65%    4.940      1 Template:Interface_navi/bg
+ 21.66%    3.735      1 Template:Userdocnavi/bg
+ 18.44%    3.180      7 Template:StdMenu
+ 13.67%    2.358      2 Template:Navigation_menu_2
+  9.64%    1.662      1 Template:TOCright
+  8.60%    1.483     20 Template:MenuCommand
+  6.65%    1.147      1 Template:Caption
+  5.93%    1.022      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117090735 and revision id 1739370. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117091639 and revision id 1739373. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
