--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -68,7 +68,7 @@
 <li><a href="../Python_console.html" class="mw-redirect" title="Python console">Python console</a>: &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088;&#1098;&#1090;, &#1082;&#1086;&#1081;&#1090;&#1086; &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1103;&#1074;&#1072; &#1076;&#1072; &#1089;&#1077; &#1089;&#1090;&#1072;&#1088;&#1090;&#1080;&#1088;&#1072; &#1087;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1077;&#1085; &#1082;&#1086;&#1076; &#1085;&#1072; <a href="../Python.html" title="Python">Python</a> &#1080;&#1085;&#1090;&#1077;&#1088;&#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1086; &#1080; &#1076;&#1072; &#1089;&#1077; &#1074;&#1080;&#1076;&#1080; &#1088;&#1077;&#1079;&#1091;&#1083;&#1090;&#1072;&#1090;&#1072; &#1074; <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>.</li>
 <li><a href="../Status_bar.html" class="mw-redirect" title="Status bar">Status bar</a>: &#1083;&#1077;&#1085;&#1090;&#1072;&#1090;&#1072;, &#1082;&#1086;&#1103;&#1090;&#1086; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1086;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1077;&#1085;&#1080; &#1089;&#1098;&#1086;&#1073;&#1097;&#1077;&#1085;&#1080;&#1103; &#1086;&#1090; &#1087;&#1088;&#1080;&#1083;&#1086;&#1078;&#1077;&#1085;&#1080;&#1077;&#1090;&#1086;, &#1080; &#1082;&#1086;&#1103;&#1090;&#1086; &#1089;&#1098;&#1076;&#1098;&#1088;&#1078;&#1072; &#1087;&#1072;&#1076;&#1072;&#1097; &#1089;&#1087;&#1080;&#1089;&#1098;&#1082; &#1079;&#1072; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072;&#1095;&#1080;&#1085;&#1072; &#1079;&#1072; &#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; <a href="../Mouse_navigation.html" title="Mouse navigation">mouse navigation</a>.</li>
 <li><a href="../DAG_view.html" class="mw-redirect" title="DAG view">DAG view</a>: &#1072;&#1083;&#1090;&#1077;&#1088;&#1085;&#1072;&#1090;&#1080;&#1074;&#1072; &#1085;&#1072; <a href="../Tree_view.html" class="mw-redirect" title="Tree view">tree view</a>, &#1082;&#1098;&#1076;&#1077;&#1090;&#1086; &#1089;&#1077; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072;&#1090; &#1074;&#1079;&#1072;&#1080;&#1084;&#1086;&#1086;&#1090;&#1085;&#1086;&#1096;&#1077;&#1085;&#1080;&#1103;&#1090;&#1072; &#1084;&#1077;&#1078;&#1076;&#1091; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1095;&#1088;&#1077;&#1079; &#1075;&#1088;&#1072;&#1092;&#1080;&#1082;&#1072;.</li></ul>
-<p>With the exception of the 3D view, all can be turned on and off by right clicking on an empty space on one of the top toolbars and choosing the desired element, or from the menu, <b>View &rarr; Panels</b>.
+<p>&#1057; &#1080;&#1079;&#1082;&#1083;&#1102;&#1095;&#1077;&#1085;&#1080;&#1077; &#1085;&#1072; 3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072;, &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1087;&#1072;&#1085;&#1077;&#1083;&#1080; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1074;&#1082;&#1083;&#1102;&#1095;&#1077;&#1085;&#1080; &#1080; &#1080;&#1079;&#1082;&#1083;&#1102;&#1095;&#1077;&#1085;&#1080;, &#1082;&#1072;&#1090;&#1086; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1089; &#1076;&#1077;&#1089;&#1085;&#1080;&#1103; &#1073;&#1091;&#1090;&#1086;&#1085; &#1074;&#1098;&#1088;&#1093;&#1091; &#1087;&#1088;&#1072;&#1079;&#1085;&#1086; &#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1089;&#1090;&#1074;&#1086; &#1085;&#1072; &#1077;&#1076;&#1085;&#1072; &#1086;&#1090; &#1085;&#1072;&#1081;-&#1075;&#1086;&#1088;&#1085;&#1080;&#1090;&#1077; &#1083;&#1077;&#1085;&#1090;&#1080; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1080; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1078;&#1077;&#1083;&#1072;&#1085;&#1080;&#1103; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;, &#1080;&#1083;&#1080; &#1086;&#1090; &#1084;&#1077;&#1085;&#1102;&#1090;&#1086;, <b>View &rarr; Panels</b>.
 </p><p>To activate and deactivate the status bar use the menu, <b>View &rarr; Status bar</b>.
 </p>
 <h3><span class="mw-headline" id="Other">Other</span></h3>
@@ -128,12 +128,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117091640
+Cached time: 20260117091804
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.125 seconds
+CPU time usage: 0.069 seconds
+Real time usage: 0.129 seconds
 Preprocessor visited node count: 353/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
@@ -144,18 +144,18 @@ Unstrip post&#8208;expand size: 2530/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.245      1 -total
- 28.65%    4.940      1 Template:Interface_navi/bg
- 21.66%    3.735      1 Template:Userdocnavi/bg
- 18.44%    3.180      7 Template:StdMenu
- 13.67%    2.358      2 Template:Navigation_menu_2
-  9.64%    1.662      1 Template:TOCright
-  8.60%    1.483     20 Template:MenuCommand
-  6.65%    1.147      1 Template:Caption
-  5.93%    1.022      1 Template:Version
+100.00%   26.345      1 -total
+ 39.28%   10.347      1 Template:Interface_navi/bg
+ 19.19%    5.055      1 Template:Userdocnavi/bg
+ 11.71%    3.086      2 Template:Navigation_menu_2
+ 11.07%    2.916      7 Template:StdMenu
+  8.51%    2.241      1 Template:Caption
+  7.80%    2.055      1 Template:Version
+  7.60%    2.003      1 Template:TOCright
+  6.63%    1.746     20 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117091639 and revision id 1739373. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117091804 and revision id 1739375. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
